Написаны модульные тесты, проведен рефакторинг