@@ -5,9 +5,9 @@ import io.github.wolfandw.mymarket.model.Item;
 import io.github.wolfandw.mymarket.service.mapper.ItemToDtoMapper;
 import org.springframework.stereotype.Component;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * Реализация {@link ItemToDtoMapper}.
@@ -15,9 +15,10 @@ import java.util.stream.Collectors;
 @Component
 public class ItemToDtoMapperImpl implements ItemToDtoMapper {
     @Override
-    public List<ItemDto> mapItems(List<Item> items, Map<Long, Integer> itemsCount) {
-        return items.stream().map(item -> mapItem(item,
-                itemsCount.getOrDefault(item.getId(),0))).collect(Collectors.toList());
+    public List<List<ItemDto>> mapToTriples(List<Item> items, Map<Long, Integer> itemsCartCount) {
+        List<ItemDto> itemsDto = items.stream().map(item -> mapItem(item,
+                itemsCartCount.getOrDefault(item.getId(),0))).toList();
+        return convertToTriples(itemsDto);
     }
 
     @Override
@@ -27,5 +28,19 @@ public class ItemToDtoMapperImpl implements ItemToDtoMapper {
                 item.getDescription(),
                 item.getPrice().longValue(),
                 count);
+    }
+
+    private List<List<ItemDto>> convertToTriples(List<ItemDto> itemsDto) {
+        int itemsSize = itemsDto.size();
+        int itemsDtoSize = itemsSize % 3 == 0 ? itemsSize : (itemsSize / 3 * 3 + 3);
+        List<List<ItemDto>> result = new ArrayList<>();
+        for (int i = 0; i < itemsDtoSize; i++) {
+            if (i % 3 == 0) {
+                result.add(new ArrayList<>());
+            }
+            result.getLast().add(i < itemsSize ? itemsDto.get(i) :
+                    new ItemDto(-1L, "", "", 0L, 0));
+        }
+        return result;
     }
 }
